dataset1235/2025-2/1955397009/users/3218273088/executions/3239899347_2086141900.log
== RUN (2025-08-28 12:23:22)
-- CODE: 
from math import *
l=float(input("digite lado:")
apotema=l/(2*(tan(pi/11)))
area=(11*l*apotema)/2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 2
    l=float(input("digite lado:")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 2
    l=float(input("digite lado:")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 2
    l=float(input("digite lado:")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 2
    l=float(input("digite lado:")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 2
    l=float(input("digite lado:")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 2
    l=float(input("digite lado:")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:23:39)
-- CODE: 
from math import *
l=float(input("digite lado:"))
apotema=l/(2*(tan(pi/11)))
area=(11*l*apotema)/2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
digite lado:234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
digite lado:149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
digite lado:337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
digite lado:37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
digite lado:458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
digite lado:84.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:23:51)
-- CODE: 
from math import *
l=float(input("digite lado:"))
apotema=l/(2*(tan(pi/11)))
area=(11*l*apotema)/2
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
digite lado:234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
digite lado:149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
digite lado:337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
digite lado:37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
digite lado:458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
digite lado:84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:22:56)
-- CODE: 
from math import *
l=float("digite lado")
apotema=l/(2*(tan(pi/11)))
area=(11*l*apotema)/2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    l=float("digite lado")
      ^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'digite lado'
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    l=float("digite lado")
      ^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'digite lado'
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    l=float("digite lado")
      ^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'digite lado'
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    l=float("digite lado")
      ^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'digite lado'
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    l=float("digite lado")
      ^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'digite lado'
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    l=float("digite lado")
      ^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'digite lado'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
